Refactor system status api
